completed some works with mistakes

--- a/index.html
+++ b/index.html
@@ -3,17 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Assignment</title>
+    <title>My-first-assignment</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
+        <div class="container">
+            <div class="banner-img">
+                <img src="resources/Banner Image.png" alt="">
+                <div class="banner-text">
+                    <h3>Happy New Year</h3>
+                    <h1>New Year Party Celebration</h1>
+                </div>
+            </div>
+            <div class="about-info-container">
+                <p class="discount">65% OFF<p>
+                    <p id="instruction">OUR HOLIDAY DEALS ARE BETTER</p>
+                    <p id="collection">ALL CATEGORIES</p>
+                    <img id="photo" src="resources/New Year Photo.png" alt="">
+            </div>
+        
+        </div>
+        <div class="banner-img">
+            <img src="resources/Vectorrr.png" alt="">
+        </div>
 
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
